<resources>

    <string name="title_activity_test">Teste</string>

    <!-- Map Api Key -->
    <string name="google_geo_api_key">AIzaSyA6jv5Mja_AnLFvrri5toNNzFl2f1uz0HI</string>
    <!-- Facebook string -->
    <string name="facebook_app_id">1457451607910685</string>
    
    <string name="server_client_id">firebase-adminsdk-8nghe@minhaconsulta-2cf3b.iam.gserviceaccount.com</string>

    <string name="cancelled">Cancelado</string>
    <string name="permission_not_granted">Não é possível executar a ação selecionada porque você não possui permissão concedida.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Ola %1$s!</string>
    <string name="success">Sucesso</string>
    <string name="successfully_posted_post">Enviado com Sucesso \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Atualizando Status para %1$s at %2$s</string>
    <string name="photo_post">Mensagem da Foto</string>
    <string name="you_picked">Você escolheu:</string>
    <string name="no_friends_selected">&lt;Nenhum amigo selecionado&gt;</string>
    <string name="no_place_selected">&lt;Nenhum lugar selecionado&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exceção: %1$s</string>
    <!-- Facebook String -->

    <!-- GSM Server Register -->
    <string name="error_config">Por favor, adcione a %1$s constante e recompile o app.</string>
    <string name="already_registered">Dispositivo já está registrado no servidor.</string>
    <string name="gcm_registered">De Minha Consulta: dispositivo registrado com sucesso!</string>
    <string name="gcm_unregistered">De Minha Consulta: dispositivo desregistrado com sucesso!</string>
    <string name="gcm_message">De Minha Consulta: você tem uma mensagem!</string>
    <string name="gcm_error">De Minha Consulta: erro(%1$s).</string>
    <string name="gcm_recoverable_error">De Minha Consulta: erro recuperavel (%1$s).</string>
    <string name="gcm_deleted">De Minha Consulta: servidor deletou %1$d mensagens pendentes!</string>
    <string name="server_registering">Tentando (attempt %1$d/%2$d) registrar o dispositivo no Servidor Demo.</string>
    <string name="server_registered">Do Servidor Demo: Dispositivo adicionado com êxito!</string>
    <string name="server_unregistered">Do Servidor Demo: Dispositivo removido com êxito!</string>
    <string name="server_register_error">Não foi possivel registrar o dispositivo no Servidor Demo depois de %1$d tentativas.</string>
    <string name="server_unregister_error">Não foi possivel desregistrar o dispositivo no Servidor Demo (%1$s).</string>
    <string name="options_register">Registrar</string>
    <string name="options_unregister">Desregistrar</string>
    <string name="options_clear">Limpar</string>
    <string name="options_exit">Sair</string>

    <!-- GSM Server Register -->

    <string name="app_name">MinhaConsulta</string>
    <string name="hello_world">Olá Mundo!</string>
    <string name="action_settings">Configurações</string>
    <string name="action_profile">Perfil</string>
    <string name="action_appointment">Minhas Consultas</string>
    <string name="action_share">Compartilhar Agora</string>
    <string name="action_rate">Avalie-nos</string>
    <string name="action_about">Sobre o App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">Minha Consulta</string>
    <string name="title_activity_login2">Entrar Agora</string>
    <string name="title_activity_register">Registrar</string>
    <string name="title_activity_doctor_list">Colaboradores</string>
    <string name="title_activity_doctor">Doutor</string>
    <string name="title_activity_map">Mapa</string>
    <string name="title_activity_appointment">Consulta</string>
    <string name="title_activity_appointment2">Consulta</string>
    <string name="title_activity_confirm">Confirmar</string>
    <string name="title_activity_reviews">Revisões</string>
    <string name="title_activity_my_appointment">Minhas Consultas</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_aboutus">Sobre Nós</string>
    <string name="title_activity_get_city">Obter Cidade</string>

    <string name="Counsaltant_Fee">Medico Fee :</string>
    <string name="Extra_Services">Serviços Extras :</string>
    <string name="Total">Total</string>
    <string name="Dsicount">Desconto</string>
    <string name="Net_Amount">Valor Líquido</string>
    <string name="Why_you_wont_appotintment">Motivos da consulta:</string>
    <string name="Continue_and_confirm">Continuar e Confirmar</string>
    <string name="confirm_note">Nota: Esse sistema irá enviar para você um codigo de confirmação no seu numero do seu celular. Confirme o código. O sms não será cobrado.</string>
    <string name="type_code">Digite na área de texto abaixo o seguinte código: </string>
    <string name="code">CÓDIGO</string>
    <string name="code_here">CÓDIGO AQUI</string>
    <string name="Complete_Appointment">Consulta Completada</string>
    <string name="complete_note">Nota: Esse código de confirmação serve apenas para verificar se você é um humano e não um robô.</string>
    <string name="Designation">Designação :</string>
    <string name="Speciality">Especialidade :</string>
    <string name="Clinics">Clínicas </string>
    <string name="Login_user">Entrar com usuário</string>
    <string name="Social_Login">Entrar com Rede Social</string>
    <string name="Register_New_User">Registrar novo usuário</string>
    <string name="txtemailtext">you@xy.com / mobilenumber</string>
    <string name="password">Senha</string>
    <string name="login_now">Entrar Agora</string>
    <string name="send_password">Enviar Senha</string>
    <string name="need_password">Precisa da senha?</string>
    <string name="name">Nome : </string>
    <string name="email">Email : </string>
    <string name="phone">Telefone : </string>
    <string name="city">Cidade : </string>
    <string name="zip">CEP : </string>
    <string name="save">Salvar</string>
    <string name="Confirm_Mobile">Confirmar telefone</string>
    <string name="hint_fname_lname">Primeiro nome Último Nome</string>
    <string name="hint_email">you@xy.com</string>
    <string name="hint_password">Senha</string>
    <string name="hint_phone">Número de Telefone</string>
    <string name="tnc">Aceitar Termos e Condições de Uso</string>
    <string name="register">Registrar</string>
    <string name="Add_Review">Adicionar Revisão</string>
    <string name="Your_Rating">Sua Avaliação</string>
    <string name="Your_Comment">Seu Comentário</string>
    <string name="hint_Your_comment">Seu Comentário Aqui</string>
    <string name="Submit_Review">Enviar Revisão</string>
    <string name="Search_Location">Procurar Localização :</string>
    <string name="Notification">Notificação!</string>
    <string name="News_Latter">Boletim de Notícias</string>
    <string name="find_a_doctor">Encontrar um Médico</string>
    <string name="Continue_without_login">Continuar sem realizar o login</string>
    <string name="book_appoitment">Agendar Consulta</string>
    <string name="Drive_to_location">Dirigir para a localidade</string>
    <string name="Comments">Comentários</string>
    <string name="no_intent_connection">Por favor, conecte seu dispositivo na internet</string>
    <string name="loading_wait">Carregando. Por favor, espere...</string>
    <string name="sms_send_failed">Falha no SMS, por favor tente novamente mais tarde!</string>
    <string name="sms_string_for_dr">Consulta n.: #appno#, #username# com o celular #mobile# para o dia #date# às #time#</string>
    <string name="sms_string_for_user">Consulta n.: #appno# com o #drname# agendada para o dia #date# às #time#</string>
    <string name="yr_expr"> Anos Exp.</string>
    <string name="currency">Rs.</string>
    <string name="load_more">Carregar mais</string>
    <string name="message_cancle_appointment">Você tem certeza que deseja cancelar a consulta?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancle">Cancelar</string>
    <string name="confirm_success">Confirmação com sucesso</string>
    <string name="code_is_not_avaible">O código de confirmação não é válido</string>
    <string name="sms_confirmation_code">Obrigado, o código de confirmação é: #code#</string>
    <string name="app_permission">Permissão do App </string>
    <string name="app_permission_message">Tenha certeza de que seu app tem as permissões requeridas.</string>
    <string name="txtsemcidade">Esta cidade ainda não possui essa Especialidade!</string>
    <string name="txtcity">Esta cidade ainda não possui essa especialidade!</string>
    <string name="txtindique">Indique alguém!</string>
    <string name="action_sair">Sair</string>
</resources>
