<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.minhaConsulta.DoctorActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
             >

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:id="@+id/imageBanner"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />

                <!--  <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:alpha="1"
                    android:src="@drawable/ic_launcher"

                    android:layout_marginTop="95dp"
                    android:layout_marginLeft="5dp"
                     />-->
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="00.5"
                android:background="#000000"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="80dp"
                     >

                    <TextView
                        android:id="@+id/textDrName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nome:"
                        android:textColor="#ffffff"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:id="@+id/textDrDegree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MBBS"
                        android:textColor="#ffffff"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <com.pkmmte.view.CircularImageView
                     android:id="@+id/imageView1"
                     android:layout_width="60dp"
        android:layout_height="60dp"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="4dp"
        app:shadow="true"
                    android:layout_alignParentStart="true"
                    android:elevation="6dp"
                    android:alpha="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:id="@+id/textDrExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 Anos Exp."
                    android:textColor="#ffffff"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignBottom="@+id/linearLayout1"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout1"
                android:layout_centerHorizontal="true"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/xml_border_bottom"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Designation" />

                    <TextView
                        android:id="@+id/textDrDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sirgen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/xml_border_bottom"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Speciality" />

                    <TextView
                        android:id="@+id/textDrSpeciality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Kidney" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#f2f2f2"
                    android:padding="10dp"
                    android:text="@string/Clinics"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_clinics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>